--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.2",
     "antd": "^5.24.1",
+    "axios": "^1.7.9",
     "firebase": "^11.3.1",
     "next": "15.1.7",
     "react": "^19.0.0",
