--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/x-charts": "^7.27.1",
     "antd": "^5.24.1",
     "axios": "^1.7.9",
+    "express": "^4.21.2",
     "firebase": "^11.3.1",
     "next": "15.1.7",
     "react": "^19.0.0",
